styles/app/TabNav.module.scss
.hideTabMenu {
    opacity: 0%;
    pointer-events: none;
    transition: opacity 0.2s ease-out;
}

.showTabMenu {
    opacity: 95%;
    transition: opacity 0.2s ease-out;
    z-index: 10000;
    position: relative;
}

.container {
    background: var(--primary-color);
    position: fixed;
    height: 50px;
    width: 100vw;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 1em;
    color: var(--lightest-aqua);
    z-index: 999;

    .tab {
        // border: 1px solid black;
        // height: 100%;
        display: flex;
        position: relative;
        padding: 0px 18px;
        span {
            text-align: center;
        }

        .edit {
            position: absolute;
            right: 0px;
            opacity: 50%;
            cursor: pointer;

    
            display: none;
        }

        .tabInput {
            background: none;
            color: var(--lightest-aqua);
        }

        &:hover {
            .edit {
                display: block;
            }
        }
    }
}

